SG-2004-01-08-2: Bugfix:    The scheduler did not get new queue instances,
                            when the system was started without any queue.
                 Changed:   scheduler                            

SG-2004-01-08-1: Bugfix:    qsub -N error message reports the rules for
                            job names
                 Changed:   qsub                            

SG-2004-01-08-0: Enhancem.: second part of SG-2003-01-07-1
                 Changed:   qstat, qselect
                 Review:    pending

JG-2004-01-08-0: Enhancem.: Use Berkeley DB RPC server in case spooling to a 
                            local filesystem is not possible (e.g. if the 
                            sge_shadowd shall be used), adapted installation
                            procedure and testsuite.
                 Bugfix:    Fix spooling of sharetree.
                 Review:    MD, AD

AD-2004-01-08-0: Bugfix:    'log_state_t' has only been allocated for the
                            first thread calling one of the log state
                            get/set functions.
                 Changed:   uti
                 Review:    CR

AD-2004-01-07-3: Enhancem:  'SGE_LOCK' and 'SGE_UNLOCK' now use 'DLOCKPRINTF'.
                 Changed:   lck

AD-2004-01-07-2: Enhancem:  Did add test program for recursive locks. Did
                            update existing lock test programs.
                 Changed:   lck

AD-2004-01-07-1: Enhancem:  Did add '-D_GNU_SOURCE' for Linux. Did replace
                            'CLK_TCK' with 'sysconf(_SC_CLK_TCK)'.
                 Changed:   aimk, util
                 Review:    AH

SG-2003-01-07-1: Enhancem:  added qstat -qs and qselect -qs feature.
                 Changed:   qstat, man-pages
                 Review:    pending

DT-2004-01-07-1: Bugfix:    Fixed install for -secure
                 Changed:   util/arch_variables, inst_sge

DT-2004-01-07-0: Bugfix:    Fixed dependency problem for -secure with Sun make